<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".NumbersMain$PlaceholderFragment"
    android:background="@color/white"
    >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/fact_text"
        android:textColor="@color/grey"
        android:background="@color/light_grey"
        android:textSize="25sp"
        android:text="The fact related to the chosen number will be displayed here. This is just a dummy text. Okay ?"
        android:layout_below="@+id/header_layout"
        android:padding="12dp"
        android:visibility="gone"/>
    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/share_button"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/horizontal_margin_back_button"
        android:layout_marginBottom="@dimen/vertical_margin_share_button"
        android:background="@android:drawable/ic_menu_share"
        android:onClick="onShareButtonPress"
        android:visibility="gone"
        />
    <ImageView
        android:layout_above="@+id/adView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="20dp"
        android:id="@+id/back_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/horizontal_margin_back_button"
        android:layout_marginBottom="@dimen/vertical_margin_back_button"
        android:background="@drawable/round_button_violet"
        android:src="@drawable/plus"
        android:onClick="backButtonPress"
        android:visibility="gone"
        />



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_height"
        android:background="@drawable/headerbg"
        android:id="@+id/header_layout"
        android:paddingTop="@dimen/vertical_margin"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_me_with_daily_date_facts"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/daily_checkbox"
            android:layout_below="@+id/Flipmeter"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>




        <com.vinayrraj.flipdigit.lib.Flipmeter
            android:id="@+id/Flipmeter"
            android:paddingTop="@dimen/vertical_margin_flipdigit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        </RelativeLayout>



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_layout"
        android:layout_marginTop="25dp"
        android:id="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        >

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_daily_fact"
        android:id="@+id/radioButton_daily_fact"
        android:background="@color/light_grey"
        android:textColor="@color/dark_grey"
        android:checked="true"
        android:padding="5dp"
        android:textSize="20sp"
       />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_random_fact"
            android:id="@+id/radioButton_random_fact"
            android:background="@color/grey"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            />


    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_math_fact"
        android:id="@+id/radioButton_math_fact"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:background="@color/light_grey"
        android:textColor="@color/dark_grey"
       />

        <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_date_fact"
        android:id="@+id/radioButton_date_fact"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:background="@color/grey"
        android:textColor="@color/white"
        />

    </RadioGroup>

    <ImageView
        android:id="@+id/get_facts_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button_pink"
        android:src="@drawable/plus"
        android:gravity="center_vertical|center_horizontal"
        android:padding="30dp"
        android:layout_below="@+id/radioGroup"
        android:textColor="@color/light_grey"
        android:onClick="getFacts"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/transparent_rect"
        android:visibility="gone"
        android:id="@+id/blur_bg"
        android:alpha="0">
    </View>

    <com.varunest.ui.CroppedRelativeLayout
        android:id="@+id/custom_layout"
        android:layout_below="@+id/header_layout"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:background="@color/pink"
        >

    </com.varunest.ui.CroppedRelativeLayout>

    <EditText
        android:background="@android:color/white"
        android:padding="10dp"
        android:textSize="25sp"
        android:layout_width="200dp"
        android:inputType="number"
        android:maxLength="6"
        android:hint="query..."
        android:textColor="@color/dark_grey"
        android:layout_height="wrap_content"
        android:id="@+id/number_input"
        android:textColorHint="@color/light_grey"
        android:layout_alignBottom="@+id/header_layout"
        android:layout_marginBottom="-20dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

    <com.varunest.ui.CroppedRelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/pink"
        android:id="@+id/full_crop">
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text"
            android:layout_marginTop="@dimen/vertical_margin_titleText"
            />
        <TextView
            android:id="@+id/subtitle_text"
            android:layout_below="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/subtitle_text"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/subtitle_text"
            android:layout_marginTop="@dimen/vertical_margin"/>

    </com.varunest.ui.CroppedRelativeLayout>

</RelativeLayout>
